--- a/ipynb/11_MetodoMontecarlo.ipynb
+++ b/ipynb/11_MetodoMontecarlo.ipynb
@@ -6,16 +6,18 @@
    "source": [
     "<H1 style=\"font-size:50px\">11: Metodo Monte Carlo</H1>\n",
     "\n",
-    "## Introduzione\n",
-    "\n",
-    "Il termine Metodo Monte Carlo si riferisce a un insieme di tecniche di calcolo e simulazione che si basano sull'uso di numeri casuali."
+    "<hr>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integrazione numerica con metodo MC\n",
+    "## 1.1 Introduzione\n",
+    "\n",
+    "Il termine Metodo Monte Carlo si riferisce a un insieme di tecniche di calcolo e simulazione che si basano sull'uso di numeri casuali.\n",
+    "\n",
+    "## 1.2 Integrazione numerica con metodo MC\n",
     "\n",
     "L'idea di usare numeri casuali per calcolare un integrale numerico si basa sul teorema della media in Analisi che afferma che l'integrale  $\\int_a^b f(x)\\,dx$ è uguale al prodotto della lunghezza (con segno) dell'intervallo di integrazione $(b-a)$ per il valor medio della funzione $f$, $<f>$, nell'intervallo. Il valor medio pu&ograve; essere calcolato\n",
     "facendo la media dei valori di $f$ in un set di punti scelti a caso in $[a,b]$.<BR>\n",
@@ -184,9 +186,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generazione di eventi distribuiti secondo una densit&agrave; di probabilit&agrave; fissata\n",
+    "## 1.3 Generazione di eventi distribuiti secondo una densit&agrave; di probabilit&agrave; fissata\n",
     "\n",
-    "### Metodo hit and miss\n",
+    "### 1.3.1 Metodo hit and miss\n",
     "\n",
     "\n",
     "Supponiamo di avere la seguente distribuzione di probabilit&agrave;:\n",
@@ -251,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test della generazione Monte Carlo di punti secondo una distribuzione data\n",
+    "### 1.3.2 Test della generazione Monte Carlo di punti secondo una distribuzione data\n",
     "\n",
     "#### Una funzione generica per generare eventi secondo una distribuzione qualsiasi"
    ]
@@ -421,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Propagazione dell'errore con metodo MC"
+    "## 1.4 Propagazione dell'errore con metodo MC"
    ]
   },
   {
@@ -506,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot di controllo\n",
+    "### 1.4.1 Plot di controllo\n",
     "\n",
     "Nota sulle normalizzazioni:<BR>\n",
     "    - Dato un istogramma con $N_{tot}$ valori, i valori in ciascun bin sommano a $N_{tot}$.    \n",
@@ -602,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simulazione di eventi complessi con metodo MC"
+    "## 1.5 Simulazione di eventi complessi con metodo MC"
    ]
   },
   {
