--- a/ipynb/13_Classi.ipynb
+++ b/ipynb/13_Classi.ipynb
@@ -6,7 +6,15 @@
    "source": [
     "<H1 style=\"font-size:50px\">13: Object Oriented Programming (OOP) e Classi in Python</H1>\n",
     "\n",
-    "## Introduzione\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 1.1 Introduzione\n",
     "\n",
     "Questo notebook si basa sulle lezioni 8 e 9 di:\n",
     "https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/\n",
@@ -31,7 +39,7 @@
     "- 1234 + 356 &egrave; la procedura che permette di sommare due interi\n",
     "- 'Hello' + 'World' &egrave; la procedura che permette di concatenare due stringhe\n",
     "\n",
-    "### In Python **TUTTO È UN OGGETTO**\n",
+    "### 1.1.1 In Python **TUTTO È UN OGGETTO**\n",
     "- ha un **tipo**\n",
     "- pu&ograve; essere **creato**\n",
     "- pu&ograve; essere **manipolato**\n",
@@ -54,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creare una classe"
+    "## 1.2 Creare una classe"
    ]
   },
   {
@@ -79,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utilizzare esemplari della classe"
+    "## 1.3 Utilizzare esemplari della classe"
    ]
   },
   {
@@ -134,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Come usare i metodi di una classe"
+    "### 1.3.1 Come usare i metodi di una classe"
    ]
   },
   {
@@ -209,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stampare un esemplare di una classe e metodo `__str__`"
+    "### 1.3.2 Stampare un esemplare di una classe e metodo `__str__`"
    ]
   },
   {
@@ -565,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accedere e modificare i dati di un esemplare: getters and setters\n",
+    "### 1.3.3 Accedere e modificare i dati di un esemplare: getters and setters\n",
     "\n",
     "Abbiamo visto che se nell\\' `__init__` di una classe `C` &egrave; definito l'attributo `x` è possibile accedere al valore dell'attributo per un esemplare `es` con la notazione `es.x`.<BR>\n",
     "&Egrave; per&ograve; preferibile e fortemente incoraggiato accedere e modificare, dall'esterno della classe, gli attributi di un esemplare attraverso metodi appositi, detti getters e setters, che devono essere definiti all'interno della classe."
@@ -660,7 +668,7 @@
    "source": [
     "Una delle idee basilari dell'Object Oriented programmi &egrave; di interagire con gli oggetti **solamente** attraverso le funzioni della classe, nascondendo i dettagli interni dell'implementazione.\n",
     "\n",
-    "## Inheritance\n",
+    "## 1.4 Inheritance\n",
     "Una classe pu&ograve; ereditare metodi e attributi da una superclasse già esistente.\n",
     "\n",
     "<div style= 'padding:20px 20px 20px 50px;'>\n",
