--- a/ipynb/14_Decoratori.ipynb
+++ b/ipynb/14_Decoratori.ipynb
@@ -4,8 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decoratori\n",
-    "==========\n",
+    "<H1 style=\"font-size:50px\">14: Decoratori</H1>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "## 1.1 Introduzione\n",
     "\n",
     "La lezione è basata su https://realpython.com/primer-on-python-decorators/.\n",
     "\n",
@@ -175,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Un primo esempio di decoratore"
+    "### 1.1.1 Un primo esempio di decoratore"
    ]
   },
   {
@@ -344,7 +347,7 @@
    "source": [
     "Riassumendo: un decoratore si `avvolge` attorno ad una funzione e ne modifica il comportamento.\n",
     "\n",
-    "### Esempio 2\n",
+    "### 1.1.2 Esempio 2\n",
     "\n",
     "L'azione svolta da un decoratore può essere determinato dinamicamente, cioè quando la funzione decorata viene chiamata"
    ]
@@ -445,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Riutilizzare i decoratori\n",
+    "## 1.2 Riutilizzare i decoratori\n",
     "\n",
     "Se i decoratori vengono salvati in un file possono essere importati come normali funzioni e utilizzati in ambiti diversi.\n",
     "\n",
@@ -508,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decorare funzioni con argomenti\n",
+    "## 1.3 Decorare funzioni con argomenti\n",
     "Per decorare funzioni con input arbitrari è necessario utilizzare la notazione `*args, **kwargs`. L'input è passato al wrapper interno che a sua volta lo passa alle funzioni da decorare."
    ]
   },
@@ -559,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ritornare valori da una funzione decorata\n",
+    "## 1.4 Ritornare valori da una funzione decorata\n",
     "Nell'esempio seguente l'introduzione del decoratore functools.wraps serve a facilitare l'accesso alla funzione più interna"
    ]
   },
@@ -651,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decoratori nella definizione di classi\n",
+    "## 1.5 Decoratori nella definizione di classi\n",
     "\n",
     "Python possiede dei decoratori built-in che vengono comunemente utilizzati nella costruzione di classi, @classmethod, @staticmethod, and @property. I decoratori @classmethod and @staticmethod vengono usati per definire metodi interni alla classe che non sono collegati alle particolari istanze della classe stessa. Il decoratore @property definisce un attributo (può essere richiamato senza le parentesi () ). In mancanza di un metodo `setter` l'attributo non può essere modificato dall'esterno."
    ]
@@ -846,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Decoratori, sottoclassi e inheritance\n",
+    "### 1.5.1 Decoratori, sottoclassi e inheritance\n",
     "\n",
     "Una sottoclasse di Circle:"
    ]
